creusot/tests/should_fail/bug/492.mlcfg

module CreusotContracts_Invariant_Inv_Stub
  type t
  predicate inv (_x : t)
end
module CreusotContracts_Invariant_Inv_Interface
  type t
  predicate inv (_x : t)
  val inv (_x : t) : bool
    ensures { result = inv _x }
    
end
module CreusotContracts_Invariant_Inv
  type t
  predicate inv (_x : t) =
    [#"../../../../../creusot-contracts/src/invariant.rs" 16 4 16 8] true
  val inv (_x : t) : bool
    ensures { result = inv _x }
    
end
module TyInv_Trivial
  type t
  clone CreusotContracts_Invariant_Inv_Stub as Inv0 with
    type t = t
  axiom inv_trivial : forall self : t . Inv0.inv self = true
end
module C492_ReborrowTuple_Interface
  type t
  use prelude.Borrow
  use prelude.Int
  use prelude.UInt32
  clone CreusotContracts_Invariant_Inv_Stub as Inv1 with
    type t = (borrowed t, uint32)
  clone CreusotContracts_Invariant_Inv_Stub as Inv0 with
    type t = borrowed t
  val reborrow_tuple [#"../492.rs" 5 0 5 52] (x : borrowed t) : (borrowed t, uint32)
    requires {[#"../492.rs" 5 25 5 26] Inv0.inv x}
    ensures { [#"../492.rs" 4 10 4 27]  * (let (a, _) = result in a) =  * x }
    ensures { [#"../492.rs" 5 39 5 52] Inv1.inv result }
    
end
module C492_ReborrowTuple
  type t
  use prelude.Int
  use prelude.UInt32
  use prelude.Borrow
  clone CreusotContracts_Invariant_Inv_Interface as Inv1 with
    type t = (borrowed t, uint32)
  clone TyInv_Trivial as TyInv_Trivial1 with
    type t = (borrowed t, uint32),
    predicate Inv0.inv = Inv1.inv,
    axiom .
  clone CreusotContracts_Invariant_Inv_Interface as Inv0 with
    type t = borrowed t
  clone TyInv_Trivial as TyInv_Trivial0 with
    type t = borrowed t,
    predicate Inv0.inv = Inv0.inv,
    axiom .
  let rec cfg reborrow_tuple [#"../492.rs" 5 0 5 52] [@cfg:stackify] [@cfg:subregion_analysis] (x : borrowed t) : (borrowed t, uint32)
    requires {[#"../492.rs" 5 25 5 26] Inv0.inv x}
    ensures { [#"../492.rs" 4 10 4 27]  * (let (a, _) = result in a) =  * x }
    ensures { [#"../492.rs" 5 39 5 52] Inv1.inv result }
    
   = [@vc:do_not_keep_trace] [@vc:sp]
  var _0 : (borrowed t, uint32);
  var x : borrowed t = x;
  {
    goto BB0
  }
  BB0 {
    _0 <- (x, [#"../492.rs" 6 8 6 10] (32 : uint32));
    x <- any borrowed t;
    return _0
  }
  
end
module CreusotContracts_Resolve_Resolve_Resolve_Stub
  type self
  predicate resolve (self : self)
end
module CreusotContracts_Resolve_Resolve_Resolve_Interface
  type self
  predicate resolve (self : self)
  val resolve (self : self) : bool
    ensures { result = resolve self }
    
end
module CreusotContracts_Resolve_Resolve_Resolve
  type self
  predicate resolve (self : self)
  val resolve (self : self) : bool
    ensures { result = resolve self }
    
end
module CreusotContracts_Resolve_Impl0_Resolve_Stub
  type t1
  type t2
  predicate resolve (self : (t1, t2))
end
module CreusotContracts_Resolve_Impl0_Resolve_Interface
  type t1
  type t2
  predicate resolve (self : (t1, t2))
  val resolve (self : (t1, t2)) : bool
    ensures { result = resolve self }
    
end
module CreusotContracts_Resolve_Impl0_Resolve
  type t1
  type t2
  clone CreusotContracts_Resolve_Resolve_Resolve_Stub as Resolve1 with
    type self = t2
  clone CreusotContracts_Resolve_Resolve_Resolve_Stub as Resolve0 with
    type self = t1
  predicate resolve (self : (t1, t2)) =
    [#"../../../../../creusot-contracts/src/resolve.rs" 16 8 16 60] Resolve0.resolve (let (a, _) = self in a) /\ Resolve1.resolve (let (_, a) = self in a)
  val resolve (self : (t1, t2)) : bool
    ensures { result = resolve self }
    
end
module CreusotContracts_Resolve_Impl1_Resolve_Stub
  type t
  use prelude.Borrow
  predicate resolve (self : borrowed t)
end
module CreusotContracts_Resolve_Impl1_Resolve_Interface
  type t
  use prelude.Borrow
  predicate resolve (self : borrowed t)
  val resolve (self : borrowed t) : bool
    ensures { result = resolve self }
    
end
module CreusotContracts_Resolve_Impl1_Resolve
  type t
  use prelude.Borrow
  predicate resolve (self : borrowed t) =
    [#"../../../../../creusot-contracts/src/resolve.rs" 25 20 25 34]  ^ self =  * self
  val resolve (self : borrowed t) : bool
    ensures { result = resolve self }
    
end
module CreusotContracts_Resolve_Impl2_Resolve_Stub
  type t
  predicate resolve (self : t)
end
module CreusotContracts_Resolve_Impl2_Resolve_Interface
  type t
  predicate resolve (self : t)
  val resolve (self : t) : bool
    ensures { result = resolve self }
    
end
module CreusotContracts_Resolve_Impl2_Resolve
  type t
  predicate resolve (self : t) =
    [#"../../../../../creusot-contracts/src/resolve.rs" 36 8 36 12] true
  val resolve (self : t) : bool
    ensures { result = resolve self }
    
end
module C492_Test_Interface
  val test [#"../492.rs" 10 0 10 13] (_1 : ()) : ()
    ensures { [#"../492.rs" 9 10 9 15] false }
    
end
module C492_Test
  use prelude.Int
  use prelude.Int32
  use prelude.Borrow
  use prelude.UInt32
  clone CreusotContracts_Invariant_Inv_Interface as Inv1 with
    type t = (borrowed int32, uint32)
  clone TyInv_Trivial as TyInv_Trivial1 with
    type t = (borrowed int32, uint32),
    predicate Inv0.inv = Inv1.inv,
    axiom .
  clone CreusotContracts_Invariant_Inv_Interface as Inv0 with
    type t = borrowed int32
  clone TyInv_Trivial as TyInv_Trivial0 with
    type t = borrowed int32,
    predicate Inv0.inv = Inv0.inv,
    axiom .
  clone CreusotContracts_Resolve_Impl2_Resolve as Resolve2 with
    type t = uint32
  clone CreusotContracts_Resolve_Impl1_Resolve as Resolve1 with
    type t = int32
  clone CreusotContracts_Resolve_Impl0_Resolve as Resolve0 with
    type t1 = borrowed int32,
    type t2 = uint32,
    predicate Resolve0.resolve = Resolve1.resolve,
    predicate Resolve1.resolve = Resolve2.resolve
  clone C492_ReborrowTuple_Interface as ReborrowTuple0 with
    type t = int32,
    predicate Inv0.inv = Inv0.inv,
    predicate Inv1.inv = Inv1.inv
  let rec cfg test [#"../492.rs" 10 0 10 13] [@cfg:stackify] [@cfg:subregion_analysis] (_1 : ()) : ()
    ensures { [#"../492.rs" 9 10 9 15] false }
    
   = [@vc:do_not_keep_trace] [@vc:sp]
  var _0 : ();
  var x : int32;
  var res : borrowed int32;
  var _4 : (borrowed int32, uint32);
  var _6 : borrowed int32;
  {
    goto BB0
  }
  BB0 {
    x <- ([#"../492.rs" 11 16 11 17] (5 : int32));
    _6 <- Borrow.borrow_mut x;
    x <-  ^ _6;
    _4 <- ([#"../492.rs" 12 19 12 41] ReborrowTuple0.reborrow_tuple _6);
    _6 <- any borrowed int32;
    goto BB1
  }
  BB1 {
    res <- (let (a, _) = _4 in a);
    _4 <- (let (a, b) = _4 in (any borrowed int32, b));
    assume { Resolve0.resolve _4 };
    assert { [@expl:assertion] [#"../492.rs" 13 18 13 30]  ^ res = (5 : int32) };
    res <- { res with current = ([#"../492.rs" 14 11 14 13] (10 : int32)) };
    assume { Resolve1.resolve res };
    _0 <- ();
    return _0
  }
  
end
